--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,30 @@
 		font-family: 'Libre Baskerville', serif; 
 	}
 }
+
+.container {
+	min-height: 100vh;
+	@apply px-4 md:px-8;
+}
+
+.custom-btn {
+	padding: .6rem 1.3rem;
+	text-transform: capitalize;
+	font-weight: 700;
+	font-size: 1rem;
+	color: white;
+	background: #229FD4;
+	border-radius: 8px;
+	z-index: 5;
+	outline: none
+}
+
+.custom-btn-shadow {
+	border: 2px solid #229FD4; 
+	width: 120px;
+	height: 40px;
+	position: absolute;
+	top: 8px;
+	right: -4px;
+	border-radius: 8px;
+}
