style(Navbar): add basic interactivity and animations on comp

--- a/src/index.css
+++ b/src/index.css
@@ -15,24 +15,43 @@
 	@apply px-4 md:px-8;
 }
 
-.custom-btn {
-	padding: .6rem 1.3rem;
-	text-transform: capitalize;
-	font-weight: 700;
-	font-size: 1rem;
-	color: white;
-	background: #229FD4;
-	border-radius: 8px;
-	z-index: 5;
-	outline: none;
-	transform: translate(-10px, -10px);
+.underline, .desktop-link {
+	opacity: .8;
+	transition: all 200ms ease-in 100ms;
 }
 
+.underline:hover, .desktop-link:hover {
+	opacity: 1;
+	scale: 1.1;
+}
+
+.link-identifier:hover {
+}
+
+.custom-btn {
+	z-index: 5;
+	outline: none;
+	color: white;
+	font-weight: 700;
+	border-radius: 8px;
+	padding: .5rem 1.4rem;
+	background: #229FD4;
+	text-transform: capitalize;
+	transform: translate(-8px, -9px);
+	transition: transform 250ms ease 50ms;
+}
+
+.custom-btn:hover {
+	transform: translate(0, 0);
+}
+
+
+
 .custom-btn-shadow {
-	border: 2px solid #229FD4; 
-	width: 120px;
-	height: 40px;
+	top: 0;
+	height: 38px;
+	width: 128px;
 	position: absolute;
 	border-radius: 8px;
-	top: 0;
+	border: 2px solid #229FD4; 	
 }
