--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -6,10 +7,12 @@
 
 @layer base {
 	html {
-		font-family: 'Libre Baskerville', serif; 
+		font-family: 'DM Sans', sans-serif;
 	}
 }
-
+.playfair {
+	font-family: 'Playfair Display', serif;
+}
 .container {
 	min-height: 100vh;
 	min-width: 100%;
@@ -51,7 +54,7 @@
 .custom-btn-shadow {
 	top: 0;
 	height: 38px;
-	width: 128px;
+	width: 134px;
 	position: absolute;
 	border-radius: 8px;
 	border: 2px solid #229FD4; 	
