style(About): add basic css declarations to about page
close: #7

--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,12 @@
 	font-family: 'Playfair Display', serif;
 	text-transform: uppercase;
 	font-size: 2.7rem;
+	font-weight: 700;
+	position: relative;
 }
 
 .container {
-	min-height: 100vh;
-	min-width: 100%;
+	min-height: 90vh;
 	@apply px-4 md:px-8;
 }
 
