--- a/src/index.css
+++ b/src/index.css
@@ -137,3 +137,23 @@
     grid-row-end: 5;
   }
 }
+
+.how-it-works__grid {
+  transition: all 400s ease-in-out 100ms;
+}
+
+.how-it-works__grid-item {
+  padding: 2rem;
+  min-height: 300px;
+  position: relative;
+  border-radius: 0.75rem;
+  border: 1px solid #eee;
+}
+
+.how-it-works__grid-item:hover {
+  scale: 1.1;
+}
+
+.text-border-curve {
+  border-bottom-right-radius: 99px;
+}
